lib/src/compiler/tests/testdata/errors/95.out
error[E022]: unused pattern `$c`
 --> line:5:6
  |
5 |      $c = "baz"
  |      ^^ this pattern was not used in the condition
  |